Change ContrastEffect check to AdaptiveTransparency in A.T. check

Fix Contrastless Plasma Styles not being able to use Adaptive
Transparency by changing the check, for ContrastEffect being enabled in
the Plasma Style to instead check if AdaptiveTransparency is enabled in
the Plasma Style, for determining if Adaptive Transparency should be
available.

BUG: 434200
FIXED-IN: 5.81